# -*- coding: utf-8 -*-
[metadata]
name = flower
summary = 2D segmentation of flowering apple tree images
description-file =
    README.md
author = Herearii Metuarea
author-email = herearii.metuarea@gmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/hereariim/flower
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    flower

[entry_points]

deepaas.v2.model = 
    flower = flower.api

